packages/typ/tests/fixtures/diagnostics/0544_functor_call_abstract_function_int_01.ml.expected
File "0544_functor_call_abstract_function_int_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0544_functor_call_abstract_function_int_01 is not a valid module name.

File "0544_functor_call_abstract_function_int_01.ml", line 7, characters 15-16:
7 |   let y = X.id 0
                   ^
Error: The constant 0 has type int but an expression was expected of type X.t
