packages/typ/tests/fixtures/diagnostics/0544_functor_call_abstract_function_int_01.ml
module type Arg_alpha = sig
  type t
  val id : t -> t
end

module Make_alpha (X : Arg_alpha) = struct
  let y = X.id 0
end
